--- a/index.Rmd
+++ b/index.Rmd
@@ -85,7 +85,7 @@ d-title p {
 
 <div class="about">
 
-I am a linguist, software developer, and scientific programmer. In my PhD research in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/), I use experimental, corpus, and computational approaches to studying linguistic meaning, of various flavors. My dissertation investigates the learning problem of acquiring hierarchical noun meanings in early childhood, from the angles of semantics/pragmatics, distributional learning, and conceptual development.
+I am a fifth-year PhD candidate in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/). I use experimental, corpus, and computational approaches to studying linguistic meaning, of various flavors. My dissertation investigates the learning problem of acquiring hierarchical noun meanings in early childhood, from the angles of semantics/pragmatics, distributional learning, and conceptual development.
 
 I am also active in the R programming community as a mentor and open-source developer. I maintain and collaborate on several [open-source software]((/software.html)) in statistical computing ([jlmerclusterperm](https://yjunechoe.github.io/jlmerclusterperm)), data visualization ([ggtrace](https://yjunechoe.github.io/ggtrace/)), data quality assurance ([pointblank](https://github.com/rstudio/pointblank)), and interfaces to data APIs ([openalexR](https://github.com/ropensci/openalexR)). My work on graphics received an [award from the American Statistical Association in 2023](https://community.amstat.org/jointscsg-section/awards/student-paper-competition). I enjoy writing in my free time and have been maintaining a [technical blog](https://yjunechoe.github.io/blog.html) over the past 5 years, covering topics including R language internals, software design principles, and practical tutorials for everyday data analysis.
 
