--- a/research.Rmd
+++ b/research.Rmd
@@ -16,6 +16,8 @@ Links: [Google Scholar](https://scholar.google.com/citations?user=dFdQTmYAAAAJ),
 
 ### Peer-reviewed Papers
 
+**June Choe**, and Anna Papafragou. (Accepted). Distributional signatures of superordinate nouns. _Language Acquisition_. DOI: https://doi.org/10.1080/10489223.2024.2440348. [PDF]() [OSF](https://osf.io/uhpr2/)
+
 **June Choe**, and Anna Papafragou. (2023). The acquisition of subordinate nouns as pragmatic inference. _Journal of Memory and Language, 132_, 104432. DOI: https://doi.org/10.1016/j.jml.2023.104432. [PDF](https://www.langcoglab.com/_files/ugd/7cb05b_746c6f11a2214857a94c3ebbc7afa718.pdf) [OSF](https://osf.io/x8cuf/?view_only=14a975d3618e4838b6cc7681b2ecf692)
 
 **June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). [Language-specific Effects on Automatic Speech Recognition Errors for World Englishes](https://aclanthology.org/2022.coling-1.628/). In _Proceedings of the 29th International Conference on Computational Linguistics_, 7177–7186.
