--- a/research.Rmd
+++ b/research.Rmd
@@ -16,25 +16,25 @@ Links: [Google Scholar](https://scholar.google.com/citations?user=dFdQTmYAAAAJ),
 
 ### Journal Papers
 
-**June Choe**, and Anna Papafragou. (Accepted). Distributional signatures of superordinate nouns. _Language Acquisition_. DOI: 10.1080/10489223.2024.2440348. [PDF]() [OSF](https://osf.io/uhpr2/)
+**June Choe** and Anna Papafragou. (2025). Distributional signatures of superordinate nouns. _Language Acquisition_. DOI: 10.1080/10489223.2024.2440348. [PDF](static/papers/Choe_Papafragou_2025_distributional_signatures_superordinates.pdf) [OSF](https://osf.io/uhpr2/)
 
-**June Choe**, and Anna Papafragou. (2023). [The acquisition of subordinate nouns as pragmatic inference](https://doi.org/10.1016/j.jml.2023.104432). _Journal of Memory and Language, 132_, 104432. DOI: 10.1016/j.jml.2023.104432. [PDF](https://www.langcoglab.com/_files/ugd/7cb05b_746c6f11a2214857a94c3ebbc7afa718.pdf) [OSF](https://osf.io/x8cuf/?view_only=14a975d3618e4838b6cc7681b2ecf692)
+**June Choe** and Anna Papafragou. (2023). [The acquisition of subordinate nouns as pragmatic inference](https://doi.org/10.1016/j.jml.2023.104432). _Journal of Memory and Language, 132_, 104432. DOI: 10.1016/j.jml.2023.104432. [PDF](https://www.langcoglab.com/_files/ugd/7cb05b_746c6f11a2214857a94c3ebbc7afa718.pdf) [OSF](https://osf.io/x8cuf/?view_only=14a975d3618e4838b6cc7681b2ecf692)
 
-**June Choe**, Masaya Yoshida, and Jennifer Cole. (2022). [The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis](https://escholarship.org/uc/item/5d84n2x7). _Glossa Psycholinguistics, 1_(1). DOI: 10.5070/G601136. [PDF](static/papers/Choe_Yoshida_Cole_2022_prosodic_focus_garden_path_reanalysis.pdf) [OSF](https://osf.io/u6dq5/)
+**June Choe** Masaya Yoshida, and Jennifer Cole. (2022). [The role of prosodic focus in the reanalysis of garden path sentences: Depth of semantic processing impedes the revision of an erroneous local analysis](https://escholarship.org/uc/item/5d84n2x7). _Glossa Psycholinguistics, 1_(1). DOI: 10.5070/G601136. [PDF](static/papers/Choe_Yoshida_Cole_2022_prosodic_focus_garden_path_reanalysis.pdf) [OSF](https://osf.io/u6dq5/)
 
 Sean McWeeny, Jinnie S. Choi, **June Choe**, Alexander LaTourette, Megan Y. Roberts, and Elizabeth S. Norton. (2022). [Rapid automatized naming (RAN) as a kindergarten predictor of future reading in English: A systematic review and meta-analysis](https://doi.org/10.1002/rrq.467). _Reading Research Quarterly, 57_(4), 1187–1211. DOI: 10.1002/rrq.467
 
 ### Peer-reviewed Proceedings
 
-**June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). [Language-specific Effects on Automatic Speech Recognition Errors for World Englishes](https://aclanthology.org/2022.coling-1.628/). In _Proceedings of the 29th International Conference on Computational Linguistics_, 7177–7186.
+**June Choe** Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). [Language-specific Effects on Automatic Speech Recognition Errors for World Englishes](https://aclanthology.org/2022.coling-1.628/). In _Proceedings of the 29th International Conference on Computational Linguistics_, 7177–7186.
 
-May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao, and Nicole Holliday. (2022). [Training and typological bias in ASR performance for world Englishes](https://www.isca-speech.org/archive/interspeech_2022/chan22b_interspeech.html). In _Proceedings of Interspeech 2022_, 1273-1277. DOI: 10.21437/Interspeech.2022-10869.
+May Pik Yu Chan **June Choe**, Aini Li, Yiran Chen, Xin Gao, and Nicole Holliday. (2022). [Training and typological bias in ASR performance for world Englishes](https://www.isca-speech.org/archive/interspeech_2022/chan22b_interspeech.html). In _Proceedings of Interspeech 2022_, 1273-1277. DOI: 10.21437/Interspeech.2022-10869.
 
-**June Choe**, and Anna Papafragou. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). In _Proceedings of the Annual Meeting of the Cognitive Science Society_, 44, 2745-2752.
+**June Choe** and Anna Papafragou. (2022). [The acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings](https://escholarship.org/uc/item/2m87n4ht). In _Proceedings of the Annual Meeting of the Cognitive Science Society_, 44, 2745-2752.
 
 ### Conference Talks
 
-**June Choe**, and Anna Papafragou. *Children's sensitivity to informativeness in naming: basic-level vs. superordinate nouns*. Talk at the 101st Linguistic Society of America (LSA) conference. 9-12 January 2025. Philadelphia.
+**June Choe** and Anna Papafragou. *Children's sensitivity to informativeness in naming: basic-level vs. superordinate nouns*. Talk at the 101st Linguistic Society of America (LSA) conference. 9-12 January 2025. Philadelphia.
 
 **June Choe**. *Distributional signatures of superordinate nouns*. Talk at the 10th MACSIM conference. 6 April 2024. University of Maryland, College Park, MD.
 
@@ -42,25 +42,25 @@ May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao, and Nicole Hollida
 
 **June Choe**. *Persona-based social expectations in sentence processing and comprehension*. Talk at the Language, Stereotypes & Social Cognition workshop, 22-23 May, 2023. University of Pennsylvania, PA.
 
-**June Choe**, and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA. [Slides](static/slides/BUCLD_2022_Choe_Papafragou.pdf)
+**June Choe** and Anna Papafragou. *Lexical alternatives and the acquisition of subordinate nouns*. Talk at the 47th Boston University Conference on Language Development (BUCLD), 3-6 November, 2022. Boston University, Boston, MA. [Slides](static/slides/BUCLD_2022_Choe_Papafragou.pdf)
 
-**June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao and Nicole Holliday. (2022). *Language-specific Effects on Automatic Speech Recognition Errors in American English*. Talk at the 28th International Conference on Computational Linguistics (CoLing), 12-17 October, 2022. Gyeongju, South Korea. [Slides](static/slides/COLING_2022_Choe_et_al.pdf)
+**June Choe** Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao and Nicole Holliday. (2022). *Language-specific Effects on Automatic Speech Recognition Errors in American English*. Talk at the 28th International Conference on Computational Linguistics (CoLing), 12-17 October, 2022. Gyeongju, South Korea. [Slides](static/slides/COLING_2022_Choe_et_al.pdf)
 
-May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). *Training and typological bias in ASR performance for world Englishes*. Talk at the 23rd Conference of the International Speech Communication Association (INTERSPEECH), 18-22 September, 2022. Incheon, South Korea.
+May Pik Yu Chan **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday. (2022). *Training and typological bias in ASR performance for world Englishes*. Talk at the 23rd Conference of the International Speech Communication Association (INTERSPEECH), 18-22 September, 2022. Incheon, South Korea.
 
 ### Conference Presentations
 
-**June Choe**, and Anna Papafragou. *Distributional signatures of superordinate nouns*. Poster presented at the 48th Boston University Conference on Language Development (BUCLD), 2-5 November, 2023. Boston University, Boston, MA. **Paula Menyuk Travel Award**. [Abstract](static/abstract/BUCLD2023a_Abstract.pdf) [Poster](static/poster/BUCLD2023_superordinates_corpus.png)
+**June Choe** and Anna Papafragou. *Distributional signatures of superordinate nouns*. Poster presented at the 48th Boston University Conference on Language Development (BUCLD), 2-5 November, 2023. Boston University, Boston, MA. **Paula Menyuk Travel Award**. [Abstract](static/abstract/BUCLD2023a_Abstract.pdf) [Poster](static/poster/BUCLD2023_superordinates_corpus.png)
 
-**June Choe**, and Anna Papafragou. *Pragmatic underpinnings of the basic-level bias*. Poster presented at the 48th Boston University Conference on Language Development (BUCLD), 2-5 November, 2023. Boston University, Boston, MA. **Paula Menyuk Travel Award**. [Abstract](static/abstract/BUCLD2023b_Abstract.pdf) [Poster](static/poster/BUCLD2023_superordinates_judgments.png)
+**June Choe** and Anna Papafragou. *Pragmatic underpinnings of the basic-level bias*. Poster presented at the 48th Boston University Conference on Language Development (BUCLD), 2-5 November, 2023. Boston University, Boston, MA. **Paula Menyuk Travel Award**. [Abstract](static/abstract/BUCLD2023b_Abstract.pdf) [Poster](static/poster/BUCLD2023_superordinates_judgments.png)
 
 **June Choe** and Anna Papafragou. *Discourse effects on the acquisition of subordinate nouns*. Poster presented at the 9th Mid-Atlantic Colloquium of Studies in Meaning (MACSIM), 15 April 2023. University of Pennsylvania, PA.
 
 **June Choe** and Anna Papafragou. *Discourse effects on the acquisition of subordinate nouns*. Poster presented at the 36th Annual Conference on Human Sentence Processing, 9-11 March 2022. University of Pittsburg, PA. [Abstract](static/abstract/HSP_2023_Abstract.pdf) [Poster](static/poster/HSP2023.png)
 
-**June Choe**, and Anna Papafragou. *Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings*. Poster at the 2nd Experiments in Linguistic Meaning (ELM) conference, 18-20 May 2022. University of Pennsylvania, Philadelphia, PA.
+**June Choe** and Anna Papafragou. *Acquisition of subordinate nouns as pragmatic inference: Semantic alternatives modulate subordinate meanings*. Poster at the 2nd Experiments in Linguistic Meaning (ELM) conference, 18-20 May 2022. University of Pennsylvania, Philadelphia, PA.
 
-**June Choe**, and Anna Papafragou. *Beyond the basic level: Levels of informativeness and the acquisition of subordinate nouns*. Poster at the 35th Annual Conference on Human Sentence Processing (HSP), 24-26 March 2022. University of California, Santa Cruz, CA.
+**June Choe** and Anna Papafragou. *Beyond the basic level: Levels of informativeness and the acquisition of subordinate nouns*. Poster at the 35th Annual Conference on Human Sentence Processing (HSP), 24-26 March 2022. University of California, Santa Cruz, CA.
 
 **June Choe**, Jennifer Cole, and Masaya Yoshida. *Prosodic Focus Strengthens Semantic Persistence*. [Poster](static/poster/AMLAP2020.pdf) at The 26th Architectures and Mechanisms for Language Processing (AMLaP), 3-5 September 2020. Potsdam, Germany. [Abstract](static/abstract/AMLAP_2020_Abstract.pdf) [Video](https://osf.io/fjkp9/) [Slides](static/slides/AMLAP_2020_Slides.pdf)
 
@@ -68,9 +68,9 @@ May Pik Yu Chan, **June Choe**, Aini Li, Yiran Chen, Xin Gao and Nicole Holliday
 
 **June Choe**. *Social Information in Sentence Processing*. Talk at The 2019 Undergraduate Research & Arts Exposition. 29 May 2019. Northwestern University, Evanston, IL. [Abstract](static/abstract/Expo_2019_Abstract.pdf)
 
-**June Choe**, Shayne Sloggett, Masaya Yoshida and Annette D'Onofrio. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 32nd CUNY Conference on Human Sentence Processing. 29-31 March 2019. University of Colorado, Boulder, CO.
+**June Choe**, Shayne Sloggett, Masaya Yoshida, and Annette D'Onofrio. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 32nd CUNY Conference on Human Sentence Processing. 29-31 March 2019. University of Colorado, Boulder, CO.
 
-D’Onofrio, Annette, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
+Annette D’Onofrio, **June Choe** and Masaya Yoshida. *Personae in syntactic processing: Socially-specific agents bias expectations of verb transitivity*. Poster at The 93rd Annual Meeting of the Linguistics Society of America. 3-6 January 2019. New York City, NY.
 
 
 ## Research activities in FOSS
@@ -99,13 +99,13 @@ June Choe. [Stepping into {ggplot2} internals with {ggtrace}](https://www.youtub
 
 **June Choe**. (2024). jlmerclusterperm: Cluster-Based Permutation Analysis for Densely Sampled Time Data. R package version 1.1.3. https://cran.r-project.org/package=jlmerclusterperm. [Github](https://github.com/yjunechoe/jlmerclusterperm/)
 
-Rich Iannone, **June Choe**, Mauricio Vargas Sepulveda. (2024). pointblank: Data Validation and Organization of Metadata for Local and Remote Tables. R package version 0.12.1. https://CRAN.R-project.org/package=pointblank. [Github](https://rstudio.github.io/pointblank/)
+Rich Iannone, **June Choe**, and Mauricio Vargas Sepulveda. (2024). pointblank: Data Validation and Organization of Metadata for Local and Remote Tables. R package version 0.12.1. https://CRAN.R-project.org/package=pointblank. [Github](https://rstudio.github.io/pointblank/)
 
-Massimo Aria, Corrado Cuccurullo, Trang Le, **June Choe**. (2024). openalexR: Getting Bibliographic Records from 'OpenAlex' Database Using 'DSL' API. R package version 1.4.0. https://CRAN.R-project.org/package=openalexR. [Github](https://github.com/ropensci/openalexR)
+Massimo Aria, Corrado Cuccurullo, Trang Le, and **June Choe**. (2024). openalexR: Getting Bibliographic Records from 'OpenAlex' Database Using 'DSL' API. R package version 1.4.0. https://CRAN.R-project.org/package=openalexR. [Github](https://github.com/ropensci/openalexR)
 
 **June Choe**. (2024). jlme: Regression Modelling with 'GLM.jl' and 'MixedModels.jl' in 'Julia'. R package version 0.3.0. https://cran.r-project.org/package=jlme. [Github](https://github.com/yjunechoe/jlme/)
 
-Sean McWeeny, **June Choe**, & Elizabeth S. Norton. (2021). SnowGlobe: An Iterative Search Tool for Systematic Reviews and Meta-Analyses [Computer Software]. [OSF](https://doi.org/10.17605/OSF.IO/U25RN)
+Sean McWeeny, **June Choe**, and Elizabeth S. Norton. (2021). SnowGlobe: An Iterative Search Tool for Systematic Reviews and Meta-Analyses [Computer Software]. [OSF](https://doi.org/10.17605/OSF.IO/U25RN)
 
 
 ## Teaching
@@ -114,7 +114,7 @@ Sean McWeeny, **June Choe**, & Elizabeth S. Norton. (2021). SnowGlobe: An Iterat
 
 Teaching assistant for "Introduction to Linguistics". Instructor: Aletheia Cui. Spring 2024. University of Pennsylvania.
 
-Teaching assistant for "Data science for language and the mind". Instructor: Katie Schuler. Fall 2021, Spring, 2023, and Fall 2023. University of Pennsylvania.
+Teaching assistant for "Data science for language and the mind". Instructor: Kathryn Schuler. Fall 2021, Spring, 2023, and Fall 2023. University of Pennsylvania.
 
 ### Workshops led
 
@@ -126,11 +126,15 @@ _Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Win
 
 ### Guest lectures
 
+_Non-convergence and overparameterization in mixed-effects models: strategies in R and Julia_. LING 5620 “Quantitative Study of Linguistic Variation”. Instructor: Dr. Meredith Tamminga. Fall 2024. University of Pennsylvania. [GitHub](https://github.com/yjunechoe/ling5620-model-fitting)
+
+_Model extrapolation_. LING 0700 / PSYC 2314. “Data Science for studying language and the mind”. Instructor: Dr. Kathryn Schuler. Fall 2024. University of Pennsylvania. [Colab notebook](https://colab.research.google.com/drive/1muawzmVzjpCZgWaUlDE07cdHBhsLa1Fg)
+
 _Hard words and (syntactic) bootstrapping_. LING 5750 "The Acquisition of Meaning". Instructor: Dr. Anna Papafragou. Spring 2024. University of Pennsylvania.
 
 _Introduction to R for psychology research_. PSYC 4997 "Senior Honors Seminar in Psychology". Instructor: Dr. Coren Apicella. Spring 2024. University of Pennsylvania. [Colab notebook](https://colab.research.google.com/drive/1MJ23TMCYvo0jt2Lefyx60Mees6CzEFaY?usp=drive_link)
 
-_Model fitting and diagnosis with MixedModels.jl in Julia_. LING 5670 "Quantitative Study of Linguistic Variation". Instructor: Dr. Meredith Tamminga. Fall 2023. University of Pennsylvania.
+_Model fitting and diagnosis with MixedModels.jl in Julia_. LING 5670 "Quantitative Study of Linguistic Variation". Instructor: Dr. Meredith Tamminga. Fall 2023. University of Pennsylvania. [GitHub](https://github.com/yjunechoe/ling5620-julia-demo)
 
 _Simulation-based power analysis for mixed-effects models_. LING 5670 "Quantitative Study of Linguistic Variation". Instructor: Dr. Meredith Tamminga. Spring 2023. University of Pennsylvania.
 
@@ -139,14 +143,14 @@ _Simulation-based power analysis for mixed-effects models_. LING 5670 "Quantitat
 
 ### Editor
 
-- [Penn Working Papers in Linguistics (PWPL)](https://www.ling.upenn.edu/pwpl/), Volumne 30, Issue 1.
+- [Penn Working Papers in Linguistics (PWPL)](https://www.ling.upenn.edu/pwpl/), Volume 30, Issue 1.
 
 ### Reviewer
 
 - Cognition
 - Language Learning and Development
 - Journal of Open Source Software
-- Proceedings of the Annual Meeting of the Cognitive Science Society
+- Proceedings of Cognitive Science
 
 ### Membership
 
