add projects page

--- a/_posts/2024-10-18-2024-writing-research-software-jlmerclusterperm/writing-research-software-jlmerclusterperm.Rmd
+++ b/_posts/2024-10-18-2024-writing-research-software-jlmerclusterperm/writing-research-software-jlmerclusterperm.Rmd
@@ -30,7 +30,7 @@ draft: true
 
 [A little over a year ago](https://yjunechoe.github.io/posts/2023-12-31-2023-year-in-review/#r-stuff), I published [{jlmerclusterperm}](https://yjunechoe.github.io/jlmerclusterperm/), my first own [research software](https://user2021.r-project.org/blog/2021/09/04/role-of-r-in-research-software-engineering/) package, to [CRAN](https://CRAN.R-project.org/package=jlmerclusterperm). As with everything else that I've been doing over the past few years in grad school, it was a passion project that I chose to pursue and really enjoyed working on.
 
-But it's always occupied a somewhat awkward place in my heart. {jlmerclusterperm} is neither adjacent to my academic nor my programming interests - I don't even use it in my own work as a "humanities" student, and I haven't really been "[marketing](https://yihui.org/en/2018/12/social-media-marketing/)" it or otherwise nerding out about it in my online circles (versus, say, ggplot internals or R metaprogramming).
+But it's always occupied a somewhat awkward place in my heart. {jlmerclusterperm} is relatively far removed from both my academic and my programming interests - I don't use it in my own work and I also haven't really been "[marketing](https://yihui.org/en/2018/12/social-media-marketing/)" it or otherwise nerding out about it in my online circles (versus, say, ggplot internals or R metaprogramming).
 
 Against that backdrop, this blog post is motivated by three recent developments:^[As I'm writing this, a fourth inspiration came to me by way of a Mastodon share from [US RSE](https://us-rse.org/): a great, recent Nature article ["Six tips for going public with your labs software"](https://www.nature.com/articles/d41586-024-03344-y)]
 
@@ -38,7 +38,7 @@ Against that backdrop, this blog post is motivated by three recent developments:
 
 2) I need to somehow translate my work on {jlmerclusterperm} as reflecting a desirable skill/trait for my CV and resume.
 
-3) {jlmerclusterperm} reached 10k downloads^[Of course, "actual" downloads by users via `install.packages("jlmerclusterperm")` is much lower, but I'm still surprised to see this number despite the niche target audience and non-existent marketing.] on CRAN.
+3) {jlmerclusterperm} reached 10k downloads^[Of course, that's an overestimate of downloads by users, but I'm still surprised to see this number despite the niche target audience and non-existent marketing.] on CRAN.
 
 
 ## The package {jlmerclusterperm}
